added new image

--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
       aspire to become a scientist just like my father and work for my country.
       I am always thankful to my family and my friends for making me so humble
       and helping me every day trying to show me the goal amongst the bunch of
-      cloudy weather.<P><b><mark> life is a jar of both happiness as well as sadness.</mark>
+      cloudy weather.<p><b><mark> life is a jar of both happiness as well as sadness.</mark>
       Getting always what we want, is not the nature of life. Thus, one needs to
       keep oneself always motivated to the highest level. Follow the footprints
       of the great men to never be discouraged and keep yourself focused on your
       goal”.</b></p>
     </p>
+    <a href="https://github.com/Clintoncode" target="_blank">github</a>
+    <img src="TIGER.jpg" alt="">
   </body>
 </html>
